# gazelle_plugin

./: .gitignore  .gitmodules  .scalafmt.conf  .travis.yml  404.html  CHANGELOG.md  README.md  Spark-OAP-Integration-Guide.md  TPP.txt  checkstyle-suppressions.xml  checkstyle.xml  dependency.output  docker-compose.yml  index.html  mkdocs.yml  pom.xml  search.html  sitemap.xml  third-party-programs-oneCCL.txt  third-party-programs-oneDAL.txt
dev/conda-release/conda-recipes/HPNL/: CMakeLists.txt  LICENSE.txt  build.sh  meta.yaml
native-sql-engine/cpp/src/: CMakeLists.txt
native-sql-engine/cpp/src/benchmarks/: CMakeLists.txt  arrow_compute_benchmark.cc  arrow_compute_benchmark_big_scale.cc  arrow_compute_benchmark_hash_aggregate.cc  arrow_compute_benchmark_join.cc  arrow_compute_benchmark_sort.cc  arrow_compute_benchmark_wscg.cc  columnar_to_row_converter_benchmark.cc  row_to_columnar_converter_benchmark.cc  shuffle_split_benchmark.cc
native-sql-engine/cpp/src/codegen/: code_generator.h  code_generator_factory.h  expr_visitor.cc  expr_visitor.h
native-sql-engine/cpp/src/codegen/arrow_compute/: code_generator.h  expr_visitor.cc  expr_visitor.h  expr_visitor_impl.h
native-sql-engine/cpp/src/codegen/arrow_compute/ext/: action_codegen.h  actions_impl.cc  actions_impl.h  array_appender.h  array_comparator.h  array_item_index.h  array_list_iterator.h  array_taker.h  basic_physical_kernels.cc  (+27 more)
native-sql-engine/cpp/src/codegen/common/: allocator.hpp  hash_relation.h  hash_relation_number.h  hash_relation_string.h  relation.cc  relation_column.h  result_iterator.h  sort_relation.h  visitor_base.h
native-sql-engine/cpp/src/codegen/compute_ext/: code_generator.h
native-sql-engine/cpp/src/codegen/gandiva/: code_generator.h
native-sql-engine/cpp/src/data_source/parquet/: adapter.cc
native-sql-engine/cpp/src/jni/: jni_common.h  jni_wrapper.cc
native-sql-engine/cpp/src/operators/: columnar_to_row_converter.cc  columnar_to_row_converter.h  columnar_to_row_converter_avx512.cc  row_to_columnar_converter.cc  row_to_columnar_converter.h  unsafe_row_writer_and_reader.cc  unsafe_row_writer_and_reader.h
native-sql-engine/cpp/src/precompile/: array.cc  array.h  builder.cc  builder.h  gandiva.h  gandiva_projector.cc  gandiva_projector.h  hash_arrays_kernel.cc  hash_arrays_kernel.h  hash_map.cc  hash_map.h  sort.cc  sort.h  sparse_hash_map.cc  sparse_hash_map.h  type.cc  type.h  type_traits.h  unsafe_array.cc  unsafe_array.h  vector.cc  vector.h  wscgapi.hpp
native-sql-engine/cpp/src/proto/: protobuf_utils.cc  protobuf_utils.h
native-sql-engine/cpp/src/shuffle/: splitter.cc  splitter.h  type.h  utils.h
native-sql-engine/cpp/src/tests/: CMakeLists.txt  arrow_compute_test_aggregate.cc  arrow_compute_test_aggregate_decimal.cc  arrow_compute_test_check_condition.cc  arrow_compute_test_externalsort.cc  arrow_compute_test_join.cc  arrow_compute_test_join_smj.cc  arrow_compute_test_join_smj_wocg.cc  arrow_compute_test_join_wocg.cc  arrow_compute_test_precompile.cc  arrow_compute_test_sort.cc  arrow_compute_test_window.cc  arrow_compute_test_wscg.cc  columnar_to_row_converter_test.cc  jniutils_test.cc  row_to_columnar_converter_test.cc  shuffle_split_test.cc  test_utils.h  unsaferow_test.cc
native-sql-engine/cpp/src/utils/: macros.h
oap-common/src/native/libpmem/: CMakeLists.txt  com_intel_oap_common_unsafe_PMemMemoryMapper.cpp  com_intel_oap_common_unsafe_PMemMemoryMapper.h  compile.sh
oap-native-sql/cpp/src/: CMakeLists.txt
oap-native-sql/cpp/src/benchmarks/: CMakeLists.txt  arrow_compute_benchmark.cc  arrow_compute_benchmark_join.cc  arrow_compute_benchmark_sort.cc  arrow_compute_benchmark_wscg.cc  make.sh  shuffle_split_benchmark.cc
oap-native-sql/cpp/src/codegen/: code_generator.h  code_generator_factory.h
oap-native-sql/cpp/src/codegen/arrow_compute/: code_generator.h  expr_visitor.cc  expr_visitor.h  expr_visitor_impl.h
oap-native-sql/cpp/src/codegen/common/: hash_relation.cc  hash_relation.h  hash_relation_number.h  hash_relation_string.h  relation_column.h  result_iterator.h  sort_relation.h
oap-native-sql/cpp/src/jni/: jni_common.h  jni_wrapper.cc
oap-native-sql/cpp/src/precompile/: array.cc  array.h  builder.cc  builder.h  gandiva.h  hash_arrays_kernel.cc  hash_map.cc  hash_map.h  sparse_hash_map.h  unsafe_array.h
oap-native-sql/cpp/src/shuffle/: partition_writer.cc  partition_writer.h  partitioning_jni_bridge.h  splitter.cc  splitter.h  type.h  utils.h
oap-native-sql/cpp/src/tests/: CMakeLists.txt  arrow_compute_test_aggregate.cc  arrow_compute_test_check_condition.cc  arrow_compute_test_hashaggregate.cc  arrow_compute_test_join.cc  arrow_compute_test_join_smj.cc  arrow_compute_test_join_wocg.cc  arrow_compute_test_sort.cc  arrow_compute_test_wscg.cc  shuffle_split_test.cc
oap-native-sql/cpp/src/utils/: macros.h
oap-shuffle/RPMem-shuffle/rpmp/: CMakeLists.txt  README.md  main.cc
oap-shuffle/RPMem-shuffle/rpmp/benchmark/: CMakeLists.txt  circularbuffer.cc  local_allocate.cc  remote_allocate.cc  remote_allocate_write.cc  remote_read.cc  remote_write.cc
oap-shuffle/RPMem-shuffle/rpmp/pmpool/: Allocator.h  AllocatorProxy.h  Base.h  CMakeLists.txt  Common.h  Config.h  DataServer.cc  DataServer.h  Digest.h  Event.cc  Event.h  Log.h  NetworkServer.cc  NetworkServer.h  PmemAllocator.h  Protocol.cc  Protocol.h  RmaBufferRegister.h  ThreadWrapper.h
oap-shuffle/RPMem-shuffle/rpmp/pmpool/buffer/: CircularBuffer.h
oap-shuffle/RPMem-shuffle/rpmp/pmpool/client/: NetworkClient.cc  NetworkClient.h  PmPoolClient.cc  PmPoolClient.h
oap-shuffle/RPMem-shuffle/rpmp/pmpool/hash/: xxhash.cc
oap-shuffle/RPMem-shuffle/rpmp/test/: CMakeLists.txt
oap-shuffle/RPMem-shuffle/rpmp/test/integration_test/: RemoteRead.cc
oap-shuffle/RPMem-shuffle/rpmp/test/unit_test/: CircularBufferTest.cc  DigestTest.cc  main.cc
src/main/native/: CMakeLists.txt  org_apache_spark_unsafe_PMPlatform.cpp  org_apache_spark_unsafe_PMPlatform.h  org_apache_spark_unsafe_PersistentMemoryPlatform.cpp  org_apache_spark_unsafe_PersistentMemoryPlatform.h
src/main/native/vmemcache/: Makefile
(+2900 files in other folders)
